40x40 external map, alternate map controls

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,15 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+#Databases
+*.mdb
+
+#Executables
+*.exe
+
+#Config
+*.ini
+
+#Cached controls
+*.oca
